# memcached

./: Makefile.am  autogen.sh  configure.ac  hash.c  memcached.c  memcached.h  sizes.c  slabs.c  stats.c  testapp.c  util.c  version.sh
config/: pre_hook.sh
doc/: Makefile.am
